--- a/Packages/com.tp-lab.material-builder/package.json
+++ b/Packages/com.tp-lab.material-builder/package.json
@@ -1,8 +1,8 @@
 {
   "name": "com.tp-lab.material-builder",
   "displayName": "MaterialBuilder",
-  "version": "1.0.2",
-  "description": "Describe this Package",
+  "version": "1.0.3",
+  "description": "SubstancePainter \u3067\u51fa\u529b\u3057\u305f Texture \u3092\u5143\u306b Material \u3092\u69cb\u7bc9\u3059\u308b\u4fbf\u5229\u30c4\u30fc\u30eb\u3067\u3059\u3002",
   "gitDependencies": {},
   "vpmDependencies": {},
   "author": {
